welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:53: error: not found: value NORD
  if(getDirection()==NORD){
                     ^